--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 #meta {
     font-size: 50px;
-    line-height: 50px; /* Ajustar el espaciado entre líneas para centrar verticalmente */
+    line-height: 50px;
     background-color: rgb(245, 190, 11);
     text-align: center; /* Centrar el texto horizontalmente */
     padding: 10px; /* Añadir espacio alrededor del texto */
